Modernize architectural patterns and improve service reliability